[package]
name = "shortest-triangle"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.12"
vulkano-win = "0.12"
vulkano-shaders = "0.12"
winit = "0.19"
cgmath = "0.17"
image = "0.21"
time = "0.1.38"
rand = "0.6"

[profile.release]
debug = true
